deployments/kubernetes/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fulfillhub-api
  namespace: fulfillhub
  labels:
    app.kubernetes.io/name: fulfillhub-api
    app.kubernetes.io/part-of: fulfillhub-commerce
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: fulfillhub-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fulfillhub-api
        app.kubernetes.io/part-of: fulfillhub-commerce
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: fulfillhub-runtime
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 45
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/defyland/fulfillhub-go-commerce-platform:sha-placeholder
          imagePullPolicy: IfNotPresent
          command:
            - /app/fulfillhub-api
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
