deployments/kubernetes/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: fulfillhub-api
  namespace: fulfillhub
  labels:
    app.kubernetes.io/name: fulfillhub-api
    app.kubernetes.io/part-of: fulfillhub-commerce
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fulfillhub-api
  ports:
    - name: http
      port: 8080
      targetPort: http
