deployments/kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fulfillhub-default-deny
  namespace: fulfillhub
  labels:
    app.kubernetes.io/name: fulfillhub
    app.kubernetes.io/part-of: fulfillhub-commerce
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fulfillhub-api-ingress
  namespace: fulfillhub
  labels:
    app.kubernetes.io/name: fulfillhub-api
    app.kubernetes.io/part-of: fulfillhub-commerce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fulfillhub-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fulfillhub-runtime-egress
  namespace: fulfillhub
  labels:
    app.kubernetes.io/name: fulfillhub
    app.kubernetes.io/part-of: fulfillhub-commerce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: fulfillhub-commerce
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 4318
        - protocol: TCP
          port: 443
